@@ -34,6 +34,8 @@
 	* Output/GNUstepOutput/Controllers/ContentControllers/StandardContentController.m
 	* Output/GNUstepOutput/Controllers/ContentControllers/StandardQueryController.m
 	* Output/GNUstepOutput/Misc/LookedUpHost.m
+	* Output/GNUstepOutput/Misc/NSObjectAdditions.m
+	* Output/GNUstepOutput/Misc/NSViewAdditions.m
 	Replace GS memory macros
 
 2015-02-14 Riccardo Mottola <rm@gnu.org>
